--- a/assets/core/foundation/reset.css
+++ b/assets/core/foundation/reset.css
@@ -7,15 +7,8 @@ html {
   font-size: 16px;
   height: 100%;
   background: var(--background);
-  overscroll-behavior-y: none;
+  overscroll-behavior-y: contain;
   overscroll-behavior-x: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-html::-webkit-scrollbar {
-  width: 0;
-  height: 0;
 }
 
 *,
@@ -24,35 +17,18 @@ html::-webkit-scrollbar {
   box-sizing: border-box;
 }
 
-* {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-*::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-}
-
 body {
   margin: 0 auto;
   min-height: 100%;
   width: 100%;
   overflow-x: hidden;
   background: var(--background);
-  overscroll-behavior-y: none;
+  overscroll-behavior-y: contain;
   overscroll-behavior-x: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 
   font-family: var(--font-sans-stack);
   line-height: 1.5;
   color: var(--text-primary);
-}
-
-body::-webkit-scrollbar {
-  width: 0;
-  height: 0;
 }
 
 .page-shell {
@@ -93,21 +69,6 @@ article {
 article > section {
   max-width: 60rem;
   margin: 2rem auto;
-}
-
-/* SCROLL BAR */
-
-article *::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-}
-
-article *::-webkit-scrollbar-thumb {
-  background-color: transparent;
-}
-
-article pre > code::-webkit-scrollbar-thumb {
-  background-color: transparent;
 }
 
 /* TYPOGRAPHY */
